# Local_api_plaer

./: .gitignore  README.md
.github/workflows/: build.yml
app/: build.gradle  gradle.properties  settings.gradle
app/app/: build.gradle  proguard-rules.pro
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/com/tabletplayer/: App.java  BrowseActivity.java  Discovery.java  DownloadService.java  DownloadsActivity.java  MainActivity.java  PlayerActivity.java  SettingsActivity.java  Store.java  Util.java
app/app/src/main/res/anim/: fade_in.xml  fade_out.xml  item_slide_up.xml  layout_anim.xml  slide_in_left.xml  slide_in_right.xml  slide_out_left.xml  slide_out_right.xml
app/app/src/main/res/drawable/: bg_main.xml  btn_control.xml  btn_control_solid.xml  btn_primary.xml  controls_scrim.xml  edit_bg.xml  ic_aspect.xml  ic_fast_forward.xml  ic_fast_rewind.xml  ic_fullscreen.xml  ic_fullscreen_exit.xml  ic_pause.xml  ic_play.xml  ic_settings.xml  ic_skip_forward.xml  ic_skip_next.xml  ic_skip_previous.xml  list_selector.xml  overlay_bg.xml
app/app/src/main/res/layout/: activity_browse.xml  activity_downloads.xml  activity_main.xml  activity_player.xml  activity_settings.xml  list_item.xml
app/app/src/main/res/menu/: main_menu.xml
app/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/app/src/main/res/values-night/: colors.xml
magisk/: customize.sh  module.prop  service.sh
server/: Cargo.toml
server/src/: main.rs
