[package]
name = "media-server"
version = "0.1.0"
edition = "2021"
description = "Простой файловый HTTP-сервер для рутованного Android-устройства (плеер-планшет)"

[[bin]]
name = "media-server"
path = "src/main.rs"

[dependencies]
tiny_http = "0.12"
serde_json = "1"
percent-encoding = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
